--- a/index.html
+++ b/index.html
@@ -40,74 +40,39 @@
     <!-- Header -->
     <header class="bg-primary text-white text-center">
       <!-- masthead -->
-        <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-          <ol class="carousel-indicators">
-            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-            <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-            <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-          </ol>
-            <div class="carousel-inner">
-            
-            <div class="carousel-item active">
-              <img class="d-block w-100" src="img/portfolio/aa3.jpg" alt="First slide">
-            </div>
 
-            <div class="carousel-item">
-              <img class="d-block w-100" src="img/portfolio/22.jpg" alt="Second slide">
-            </div>
-
-            <div class="carousel-item">
-              <img class="d-block w-100" src="img/portfolio/aa4.jpg" alt="Second slide">
-            </div>
-
-            <div class="carousel-item">
-              <img class="d-block w-100" src="img/portfolio/aa6.jpg" alt="Second slide">
-            </div>
-
-            <div class="carousel-item">
-              <img class="d-block w-100" src="img/portfolio/a.jpg" alt="Second slide">
-            </div>
-
-            <div class="carousel-item">
-              <img class="d-block w-100" src="img/portfolio/aa5.jpg" alt="Second slide">
-            </div>
-
-            <div class="carousel-item">
-              <img class="d-block w-100" src="img/portfolio/aa2.jpg" alt="Second slide">
-            </div>
-
-            <div class="carousel-item">
-              <img class="d-block w-100" src="img/portfolio/d.jpg" alt="Third slide">
-            </div>
-            <div class="carousel-item">
-              <img class="d-block w-100" src="img/portfolio/aa7.jpg" alt="Second slide">
-            </div>
-
-            <div class="carousel-item">
-              <img class="d-block w-100" src="img/portfolio/24.jpg" alt="Third slide">
-            </div>
-
-            <div class="carousel-item">
-              <img class="d-block w-100" src="img/portfolio/3.jpg" alt="Third slide">
-            </div>
-
-            <div class="carousel-item">
-              <img class="d-block w-100" src="img/portfolio/c.jpg" alt="Second slide">
-            </div>
-   
-
-  <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="sr-only">Previous</span>
-  </a>
-  <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="sr-only">Next</span>
-  </a>
+    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+      <ol class="carousel-indicators">
+        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+      </ol>
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img class="d-block w-100" src="img/portfolio/aa3.jpg" alt="First slide">
+        </div>
+        <div class="carousel-item">
+          <img class="d-block w-100" src="img/portfolio/22.jpg" alt="Second slide">
+        </div>
+        <div class="carousel-item">
+          <img class="d-block w-100" src="img/portfolio/aa4.jpg" alt="Third slide">
+        </div>
+       <div class="carousel-item">
+          <img class="d-block w-100" src="img/portfolio/aa5.jpg" alt="Third slide">
+        </div>        
+      </div>
+      <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+       <span class="sr-only">Next</span>
+     </a>
+    </div>
 
    </header>
 
-  
     <!-- Banner Section -->
 
     <div class="banner">
@@ -141,8 +106,6 @@
       </div>      
     </section>
 
-
-
     <!-- social -->
     <div class="copyright py-4 text-center text-white fixed-bottom">
       <div class="container">
@@ -158,9 +121,6 @@
       </div>
     </div>
 
-
-  
-    
     <!-- Bootstrap core JavaScript -->
     <script src="vendor/jquery/jquery.min.js"></script>
     <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
@@ -173,8 +133,9 @@
     <script src="js/jqBootstrapValidation.js"></script>
     <script src="js/contact_me.js"></script>
 
-    <!-- Custom scripts for this template -->
+    <!-- Custom scripts for this template  -->
     <script src="js/freelancer.min.js"></script>
+
 
   </body>
 
