--- a/index.html
+++ b/index.html
@@ -48,19 +48,52 @@
         <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
       </ol>
       <div class="carousel-inner">
+
         <div class="carousel-item active">
-          <img class="d-block w-100" src="img/portfolio/aa3.jpg" alt="First slide">
+          <img class="d-block w-100" src="img/portfolio/img-7.jpg" alt="Lisa Frost">
         </div>
+
         <div class="carousel-item">
-          <img class="d-block w-100" src="img/portfolio/22.jpg" alt="Second slide">
+          <img class="d-block w-100" src="img/portfolio/img-12.jpg" alt="Lisa Frost">
         </div>
+
         <div class="carousel-item">
-          <img class="d-block w-100" src="img/portfolio/aa4.jpg" alt="Third slide">
+          <img class="d-block w-100" src="img/portfolio/img-10.jpg" alt="Lisa Frost">
         </div>
-       <div class="carousel-item">
-          <img class="d-block w-100" src="img/portfolio/aa5.jpg" alt="Third slide">
-        </div>        
+
+        <div class="carousel-item">
+          <img class="d-block w-100" src="img/portfolio/img-6.jpg" alt="Lisa Frost">
+        </div>
+
+        <div class="carousel-item">
+          <img class="d-block w-100" src="img/portfolio/img.jpg" alt="Lisa Frost">
+        </div>
+
+        <div class="carousel-item">
+          <img class="d-block w-100" src="img/portfolio/img-9.jpg" alt="Lisa Frost">
+        </div>
+
+        <div class="carousel-item">
+          <img class="d-block w-100" src="img/portfolio/img-5.jpg" alt="Lisa Frost">
+        </div>
+
+         <div class="carousel-item">
+          <img class="d-block w-100" src="img/portfolio/img-1.jpg" alt="Lisa Frost">
+        </div>
+
+        <div class="carousel-item">
+          <img class="d-block w-100" src="img/portfolio/img-2.jpg" alt="Lisa Frost">
+        </div>
+
+        <div class="carousel-item">
+          <img class="d-block w-100" src="img/portfolio/img-3.jpg" alt="Lisa Frost">
+        </div>
+
+        <div class="carousel-item">
+          <img class="d-block w-100" src="img/portfolio/img-4.jpg" alt="Lisa Frost">
+        </div>         
       </div>
+
       <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
         <span class="sr-only">Previous</span>
