--- a/index.html
+++ b/index.html
@@ -39,70 +39,54 @@
     <br>
     <!-- Header -->
     <header class="bg-primary text-white text-center">
-      <!-- masthead -->
+      <!-- masthead src="img/portfolio/img-2.jpg" -->
 
-    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-      <ol class="carousel-indicators">
-        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-      </ol>
-      <div class="carousel-inner">
 
-        <div class="carousel-item active">
-          <img class="d-block w-100" src="img/portfolio/img-7.jpg" alt="Lisa Frost">
+      <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+        <ol class="carousel-indicators">
+          <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+        </ol>
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img class="d-block w-100" src="img/portfolio/img-7.jpg" alt="First slide">
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100" src="img/portfolio/img-12.jpg" alt="Second slide">
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100" src="img/portfolio/img.jpg" alt="Third slide">
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100" src="img/portfolio/img-10.jpg" alt="Third slide">
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100" src="img/portfolio/img-6.jpg" alt="Third slide">
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100" src="img/portfolio/img-5.jpg" alt="Third slide">
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100" src="img/portfolio/img-13.jpg" alt="Third slide">
+          </div>                              
         </div>
+        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="sr-only">Next</span>
+        </a>
+      </div>      
 
-        <div class="carousel-item">
-          <img class="d-block w-100" src="img/portfolio/img-12.jpg" alt="Lisa Frost">
-        </div>
+    
 
-        <div class="carousel-item">
-          <img class="d-block w-100" src="img/portfolio/img-10.jpg" alt="Lisa Frost">
-        </div>
 
-        <div class="carousel-item">
-          <img class="d-block w-100" src="img/portfolio/img-6.jpg" alt="Lisa Frost">
-        </div>
 
-        <div class="carousel-item">
-          <img class="d-block w-100" src="img/portfolio/img.jpg" alt="Lisa Frost">
-        </div>
 
-        <div class="carousel-item">
-          <img class="d-block w-100" src="img/portfolio/img-9.jpg" alt="Lisa Frost">
-        </div>
 
-        <div class="carousel-item">
-          <img class="d-block w-100" src="img/portfolio/img-5.jpg" alt="Lisa Frost">
-        </div>
-
-         <div class="carousel-item">
-          <img class="d-block w-100" src="img/portfolio/img-1.jpg" alt="Lisa Frost">
-        </div>
-
-        <div class="carousel-item">
-          <img class="d-block w-100" src="img/portfolio/img-2.jpg" alt="Lisa Frost">
-        </div>
-
-        <div class="carousel-item">
-          <img class="d-block w-100" src="img/portfolio/img-3.jpg" alt="Lisa Frost">
-        </div>
-
-        <div class="carousel-item">
-          <img class="d-block w-100" src="img/portfolio/img-4.jpg" alt="Lisa Frost">
-        </div>         
-      </div>
-
-      <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="sr-only">Previous</span>
-      </a>
-      <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-       <span class="sr-only">Next</span>
-     </a>
-    </div>
 
    </header>
 
@@ -166,7 +150,7 @@
     <script src="js/jqBootstrapValidation.js"></script>
     <script src="js/contact_me.js"></script>
 
-    <!-- Custom scripts for this template  -->
+    <!-- Custom scripts for this template ` -->
     <script src="js/freelancer.min.js"></script>
 
 
