--- a/index.html
+++ b/index.html
@@ -52,6 +52,9 @@
           <div class="carousel-item active">
             <img class="d-block w-100" src="img/portfolio/img-7.jpg" alt="First slide">
           </div>
+         <div class="carousel-item">
+            <img class="d-block w-100" src="img/portfolio/img-15.jpg" alt="Third slide">
+          </div>                      
           <div class="carousel-item">
             <img class="d-block w-100" src="img/portfolio/img-12.jpg" alt="Second slide">
           </div>
@@ -64,12 +67,27 @@
           <div class="carousel-item">
             <img class="d-block w-100" src="img/portfolio/img-6.jpg" alt="Third slide">
           </div>
+         <div class="carousel-item">
+            <img class="d-block w-100" src="img/portfolio/img-17.jpg" alt="Third slide">
+          </div>
+         <div class="carousel-item">
+            <img class="d-block w-100" src="img/portfolio/img-18.jpg" alt="Third slide">
+          </div>
+         <div class="carousel-item">
+            <img class="d-block w-100" src="img/portfolio/img-16.jpg" alt="Third slide">
+          </div>                                       
           <div class="carousel-item">
             <img class="d-block w-100" src="img/portfolio/img-5.jpg" alt="Third slide">
           </div>
           <div class="carousel-item">
             <img class="d-block w-100" src="img/portfolio/img-13.jpg" alt="Third slide">
-          </div>                              
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100" src="img/portfolio/img-9.jpg" alt="Third slide">
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100" src="img/portfolio/img-4.jpg" alt="Third slide">
+          </div>                                                            
         </div>
         <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
           <span class="carousel-control-prev-icon" aria-hidden="true"></span>
