--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                 <div class="shadow bg-about text-white">
                   <h3> Contact Lisa: </h3>
                   <p> Lisa Frost</p>
-                  <p> email: artsyface4u@gmail.com</p>
+                  <p> email: artsyfacepainting4u@gmail.com</p>
                 </div>
               </div>
         </div>
